Bugs found and fixed